Minor edits to index

--- a/website/index.qmd
+++ b/website/index.qmd
@@ -52,7 +52,7 @@ You can download a version of R specific to your operating system from [this web
 After installing R, you should download and re-install RStudio from [this website](https://posit.co/download/rstudio-desktop/).
 
 :::{.callout-tip}
-Whenever you update your version of R, you need to re-install the packages; this is a perennial source of [frustration](https://bsky.app/profile/benbushong.com/post/3lbqnkbazgh2e) for many R users] and [some good-natured humor](https://bsky.app/profile/hadley.nz/post/3lnlrbqv7qs2i) from others[^hadley].
+Whenever you update your version of R, you need to re-install the packages; this is a perennial source of [frustration](https://bsky.app/profile/benbushong.com/post/3lbqnkbazgh2e) for many R users and [some good-natured humor](https://bsky.app/profile/hadley.nz/post/3lnlrbqv7qs2i) from others[^hadley].
 :::
 
 [^hadley]: Even Hadley Wickham, who leads the tidyverse team at Posit, [manually re-installs](https://bsky.app/profile/hadley.nz/post/3lnmafh3ljs2y) packages after every update
