Update lecture2 video links

--- a/website/lectures/lecture02.qmd
+++ b/website/lectures/lecture02.qmd
@@ -13,9 +13,9 @@ execute:
 During the EURO2022 football tournament, English player Beth Mead scored 6 goals.
 Below are links to videos for three of her goals. Which is most impressive to you? 
 
-  * Goal against Austria [link](https://youtu.be/lVGiGZN2gdw?t=1)
-  * Goal against Norway [link](https://youtu.be/lVGiGZN2gdw?t=148)
-  * Goal against Sweden [link](https://youtu.be/lVGiGZN2gdw?t=148)
+  * Goal against Austria ([video link]( https://youtube.com/clip/UgkxnOKsnw4W3h-BqV5kyh-tOVnnTgBEc9u5?si=zpQB7OF43gt3yiwK))
+  * Goal against Norway [link](https://youtube.com/clip/UgkxqZ03bRBGCr4vS0M4yTMtHMOHsA6kkTHw?si=2IlC7AVi2CQotunG)
+  * Goal against Sweden [link](https://youtube.com/clip/UgkxwW9N1bXUv4G9HoSHVvYy_rk_aSjkrgwO?si=O90nkbgNd2FTv3e_)
 
 There several important qualitative differences between these shots that affect our subjective comparison.
 For instance, because Mead scored against Austria in a one-on-one situation but had to shoot through multiple defenders against Norway and Sweden, we might view the former goal as easier and less impressive.
