Embed slides succesfully

--- a/website/slides/lecture01.qmd
+++ b/website/slides/lecture01.qmd
@@ -4,12 +4,12 @@ format: html
 slide-format: revealjs
 ---
 
-You can view the presentation [here](raw_slides/lecture01_slides/){target="_blank"}.
+You can view the presentation [here](slides_01.html){target="_blank"}.
 
 <div>
 
 ```{=html}
-<iframe class="slide-deck" src="raw_slides/lecture01_slides/lecture01_slides/"></iframe>
+<iframe class="slide-deck" src="slides_01.html" height="420" width="747" style="border: 1px solid #123233;"></iframe>
 ```
 
 </div>
