--- a/website/lectures/lecture02.qmd
+++ b/website/lectures/lecture02.qmd
@@ -13,7 +13,7 @@ execute:
 During the EURO2022 football tournament, English player Beth Mead scored 6 goals.
 Below are links to videos for three of her goals. Which is most impressive to you? 
 
-  * Goal against Austria ([video link]( https://youtube.com/clip/UgkxnOKsnw4W3h-BqV5kyh-tOVnnTgBEc9u5?si=zpQB7OF43gt3yiwK))
+  * Goal against Austria ([link](https://youtube.com/clip/UgkxnOKsnw4W3h-BqV5kyh-tOVnnTgBEc9u5?si=zpQB7OF43gt3yiwK))
   * Goal against Norway [link](https://youtube.com/clip/UgkxqZ03bRBGCr4vS0M4yTMtHMOHsA6kkTHw?si=2IlC7AVi2CQotunG)
   * Goal against Sweden [link](https://youtube.com/clip/UgkxwW9N1bXUv4G9HoSHVvYy_rk_aSjkrgwO?si=O90nkbgNd2FTv3e_)
 
