--- a/website/slides/lecture01.qmd
+++ b/website/slides/lecture01.qmd
@@ -4,7 +4,8 @@ format: html
 slide-format: revealjs
 ---
 
-You can view the presentation [here](slides_01.html){target="_blank"}.
+You can view the presentation in a full screen window [here](raw_slides/slides_01.html){target="_blank"}.
+Code for the lecture is available at [this link](../lectures/lecture02.qmd)
 
 <div>
 
