Try to add lecture02 for real

--- a/website/slides/lecture01.qmd
+++ b/website/slides/lecture01.qmd
@@ -5,12 +5,12 @@ slide-format: revealjs
 ---
 
 You can view the presentation in a full screen window [here](raw_slides/slides_01.html){target="_blank"}.
-Code for the lecture is available at [this link](../lectures/lecture02.qmd)
+Code for the lecture is available at [this link](../lectures/lecture00.qmd)
 
 <div>
 
 ```{=html}
-<iframe class="slide-deck" src="slides_01.html" height="420" width="747" style="border: 1px solid #123233;"></iframe>
+<iframe class="slide-deck" src="raw_slides/slides_01.html" height="420" width="747" style="border: 1px solid #123233;"></iframe>
 ```
 
 </div>
