Work on lecture2 slides

--- a/website/guides/plot_vertical_statsbomb.qmd
+++ b/website/guides/plot_vertical_statsbomb.qmd
@@ -99,8 +99,8 @@ bot_left_gkr <- c(114,50)
 top_right_gkr <- c(120,30)
 bot_right_gkr <- c(120,50)
 # right goal posts
-top_postl <- c(120,36)
-bot_postl <- c(120,44)
+top_postr <- c(120,36)
+bot_postr <- c(120,44)
 # corners of left net
 top_left_netr <- c(120,36)
 bot_left_netr <- c(120, 44)
